--- a/Source/Catalog.Api/project.json
+++ b/Source/Catalog.Api/project.json
@@ -7,7 +7,8 @@
     "Microsoft.AspNet.Server.IIS": "1.0.0-beta7",
     "Microsoft.AspNet.Server.Kestrel": "1.0.0-beta7",
     "Microsoft.AspNet.Server.WebListener": "1.0.0-beta7",
-    "Microsoft.AspNet.StaticFiles": "1.0.0-beta7"
+    "Microsoft.AspNet.StaticFiles": "1.0.0-beta7",
+    "MongoDB.Driver": "2.0.1"
   },
 
   "commands": {
@@ -16,8 +17,7 @@
   },
 
   "frameworks": {
-    "dnx451": {},
-    "dnxcore50": {}
+    "dnx46": {} 
   },
 
   "exclude": [
