--- a/Source/Books.Web/project.json
+++ b/Source/Books.Web/project.json
@@ -1,14 +1,23 @@
 {
+  "webroot": "wwwroot",
   "version": "1.0.0-*",
 
   "dependencies": {
+    "Microsoft.AspNet.Diagnostics": "1.0.0-beta7",
     "Microsoft.AspNet.Mvc": "6.0.0-beta7",
+    "Microsoft.AspNet.Mvc.TagHelpers": "6.0.0-beta7",
     "Microsoft.AspNet.Server.IIS": "1.0.0-beta7",
     "Microsoft.AspNet.Server.Kestrel": "1.0.0-beta7",
     "Microsoft.AspNet.Server.WebListener": "1.0.0-beta7",
     "Microsoft.AspNet.StaticFiles": "1.0.0-beta7",
+    "Microsoft.AspNet.Tooling.Razor": "1.0.0-beta7",
     "Microsoft.Framework.Configuration.Json": "1.0.0-beta7",
-    "MongoDB.Driver": "2.0.1"
+    "Microsoft.Framework.Logging": "1.0.0-beta7",
+    "Microsoft.Framework.Logging.Debug" : "1.0.0-beta7",
+    "Microsoft.Framework.Logging.Console": "1.0.0-beta7",
+    "RestSharp": "105.2.3",
+    "System.Net.Http": "4.0.1-beta-23409",
+    "Newtonsoft.Json": "7.0.1"
   },
 
   "commands": {
@@ -17,13 +26,18 @@
   },
 
   "frameworks": {
-    "dnx451": {} 
+    "dnx451": {}
   },
 
-  "exclude": [],
+  "exclude": [
+    "wwwroot"
+  ],
   "publishExclude": [
     "**.xproj",
     "**.user",
     "**.vspscc"
-  ]
+  ],
+  "scripts": {
+    "prepublish": []
+  }
 }
