--- a/dev/Vagrantfile
+++ b/dev/Vagrantfile
@@ -8,7 +8,7 @@ Vagrant.configure(2) do |config|
   config.vm.hostname = "books-mongodb"
   config.vm.box = "bento/ubuntu-14.04"
   config.vm.network "forwarded_port", guest: 27017, host: 27017
-  config.vm.synced_folder "../", "/vagrant"
+  # config.vm.synced_folder "../", "/vagrant"
 
   config.vm.provision "shell", inline: <<-SHELL
     sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 7F0CEB10
